--- a/wordle/index.html
+++ b/wordle/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
-    <title>夢想之都 | 2022駁二動漫祭</title>
+    <title>成智語典</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -30,18 +30,9 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
-    <meta property="og:title" content="夢想之都 | 2022駁二動漫祭" />
-    <meta
-      property="og:description"
-      content="首次線下實體展，就在駁二 B4倉庫 Vtuber專區。限量週邊與現場活動，等你來參加!"
-    />
-    <meta
-      name="description"
-      content="首次線下實體展，就在駁二 B4倉庫 Vtuber專區。限量週邊與現場活動，等你來參加!"
-    />
-    <script defer="defer" src="js/chunk-vendors.ccbd6f95.js"></script>
-    <script defer="defer" src="js/app.a6cffa7a.js"></script>
-    <link href="css/chunk-vendors.3f42ba42.css" rel="stylesheet" />
+    <script defer="defer" src="js/chunk-vendors.a3f58423.js"></script>
+    <script defer="defer" src="js/app.d74fe8f9.js"></script>
+    <link href="css/chunk-vendors.bb1c0fd8.css" rel="stylesheet" />
     <link href="css/app.f0ce2070.css" rel="stylesheet" />
   </head>
   <body>
