--- a/iot/index.html
+++ b/iot/index.html
@@ -14,14 +14,25 @@
 </head>
 
 <body class="is-preload">
+	<div class="video">
+		<video id="myVideo" autoplay loop controls>
+			<source src="/images/video.mp4" type="video/mp4">
+		</video>
+	</div>
+	<script>
+		var video = document.getElementById('myVideo');
+		video.volume = 0.05;  // Sets volume to 20%
+	</script>
 
 	<!-- Header -->
 	<section id="header">
 		<header class="major">
-			<h1>虛擬互動式螢光棒</h1>
-			<p style="font-size: 120%;">6/11歌回啟動</p>
+			<!-- <h1>虛擬互動式螢光棒</h1> -->
+			<!-- <p style="font-size: 120%;">6/11歌回啟動</p> -->
 		</header>
 		<div class="container">
+			<h1>虛擬互動式螢光棒 | 6/11歌回啟動</h1>
+			<!-- <p></p> -->
 			<ul class="actions special">
 				<li><a href="#one" class="button primary scrolly">登陸集氣</a></li>
 			</ul>
@@ -120,7 +131,16 @@
 					<li>開發：linyu07、XTT、Sakuya</li>
 					<li>合作：清水紗智子、夢想之都工作室</li>
 				</ul>
+				<div class="embed-container">
+					<iframe src="https://www.youtube.com/embed/jREhCOYr7V4" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<p></p>
+				<div class="embed-container">
+					<iframe src="https://www.youtube.com/embed/HgMpIruB4nU" frameborder="0" allowfullscreen></iframe>
+				</div>
+
 			</div>
+			<p></p>
 			<!-- <a href="#footer" class="goto-next scrolly">Next</a> -->
 			<footer>
 				<ul class="copyright">
@@ -131,31 +151,6 @@
 
 		</div>
 	</section>
-
-
-	<!-- Footer -->
-	<!-- <section id="footer">
-		<div class="container">
-			<header class="major">
-				<h2>Get in touch</h2>
-			</header>
-			<form method="post" action="#">
-				<div class="row gtr-uniform">
-					<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" />
-					</div>
-					<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" />
-					</div>
-					<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-					</div>
-					<div class="col-12">
-						<ul class="actions special">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-						</ul>
-					</div>
-				</div>
-			</form>
-		</div>
-	</section> -->
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
