--- a/iot/index.html
+++ b/iot/index.html
@@ -16,12 +16,12 @@
 <body class="is-preload">
 	<div class="video">
 		<video id="myVideo" autoplay loop controls>
-			<source src="/images/video.mp4" type="video/mp4">
+			<source src="https://test.dreamcity.studio/iot/images/video.mp4" type="video/mp4">
 		</video>
 	</div>
 	<script>
 		var video = document.getElementById('myVideo');
-		video.volume = 0.05;  // Sets volume to 20%
+		video.volume = 0.04;  // Sets volume to 20%
 	</script>
 
 	<!-- Header -->
