--- a/iot/index.html
+++ b/iot/index.html
@@ -15,7 +15,7 @@
 
 <body class="is-preload">
 	<div class="video">
-		<video id="myVideo" autoplay loop controls>
+		<video id="myVideo" autoplay loop>
 			<source src="https://test.dreamcity.studio/iot/images/video.mp4" type="video/mp4">
 		</video>
 	</div>
