--- a/iot/index.html
+++ b/iot/index.html
@@ -15,14 +15,10 @@
 
 <body class="is-preload">
 	<div class="video">
-		<video id="myVideo" autoplay loop>
+		<video muted autoplay loop>
 			<source src="https://test.dreamcity.studio/iot/images/video.mp4" type="video/mp4">
 		</video>
 	</div>
-	<script>
-		var video = document.getElementById('myVideo');
-		video.volume = 0.04;  // Sets volume to 20%
-	</script>
 
 	<!-- Header -->
 	<section id="header">
