--- a/iot/index.html
+++ b/iot/index.html
@@ -106,7 +106,7 @@
 				<li><a style="background-color: #d1bf8c;"
 						href="https://www.youtube.com/@shimizusachiko?sub_confirmation=1"
 						class="button primary fit small">搶先訂閱紗智子</a></li>
-				<li><a href="#" class="button fit small" onclick="showAlert(event)">6/11 晚間8點 開放進入</a></li>
+				<li><a href="#" class="button fit small" onclick="showAlert(event)">6/11 晚間十點 開放進入</a></li>
 			</ul>
 			<a href="#four" class="goto-next scrolly">Next</a>
 
