--- a/iot/index.html
+++ b/iot/index.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="https://test.dreamcity.studio/iot/images/icon.png" type="image/x-icon" />
 </head>
 
 <body class="is-preload">
