--- a/iot/index.html
+++ b/iot/index.html
@@ -42,10 +42,15 @@
 			<div class="content">
 				<img src="images/image1.png" alt="虛實跨界線上互動" style="width: 80%;">
 				<p>結合新媒體傳播媒介與陽明交大資工系專業技能，使物聯網裝置達成虛實跨界線上互動</p>
+				<div class="col-12"><span class="image fit"><img src="images/b1.jpg" alt="" /></span></div>
+
 				<img src="images/image2.png" alt="輕鬆點擊即刻進入" style="width: 80%;">
 				<p>使用IoTtalk平台為後端，觀眾掃描QRcode或點擊網址，輕鬆進入設計互動頁面</p>
+
 				<img src="images/image4.png" alt="三款螢光棒隨意換" style="width: 80%;">
 				<p>設計團隊以「清水紗智子」打造了專屬風格，以粉絲「花椰菜」為主題做創意設計</p>
+				<div class="col-12"><span class="image fit"><img src="images/b3.jpg" alt="" /></span></div>
+
 			</div>
 			<a href="#two" class="goto-next scrolly">Next</a>
 		</div>
@@ -61,19 +66,19 @@
 				<ul class="icons-grid">
 					<li>
 						<h3>1. 進入互動網頁</h3>
-						<img src="images/1.png" alt="" style="width:80%;padding-top: 5%;">
+						<img src="images/1.jpg" alt="" style="width:80%;padding-top: 5%;">
 					</li>
 					<li>
 						<h3>2. 登入Google</h3>
-						<img src="images/2.png" alt="" style="width:80%;padding-top: 5%;">
+						<img src="images/2.jpg" alt="" style="width:80%;padding-top: 5%;">
 					</li>
 					<li>
 						<h3>3. 點擊感測器確認</h3>
-						<img src="images/3.png" alt="" style="width:80%;padding-top: 5%;">
+						<img src="images/3.jpg" alt="" style="width:80%;padding-top: 5%;">
 					</li>
 					<li>
 						<h3>4. 開始互動</h3>
-						<img src="images/4.png" alt="" style="width:80%;padding-top: 5%;">
+						<img src="images/4.jpg" alt="" style="width:80%;padding-top: 5%;">
 					</li>
 				</ul>
 			</div>
