--- a/iot/index.html
+++ b/iot/index.html
@@ -28,11 +28,11 @@
 			<!-- <p style="font-size: 120%;">6/11歌回啟動</p> -->
 		</header>
 		<div class="container">
-			<h1>虛擬互動式螢光棒 | 6/11歌回啟動</h1>
+			<h1 style="font-size: 150%;"><a href="#one" class="scrolly">虛擬互動式螢光棒首次上線！<br>6/11 晚間10點｜歌回啟動</a></h1>
 			<!-- <p></p> -->
-			<ul class="actions special">
-				<li><a href="#one" class="button primary scrolly">登陸集氣</a></li>
-			</ul>
+			<!-- <ul class="actions special">
+				<li><a href="#one" class="button primary scrolly">按讚集氣</a></li>
+			</ul> -->
 		</div>
 	</section>
 
@@ -40,12 +40,16 @@
 	<section id="one" class="main special">
 		<div class="container">
 			<div class="content">
+				<div class="col-12"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
+
+				<hr>
 				<img src="images/image1.png" alt="虛實跨界線上互動" style="width: 80%;">
 				<p>結合新媒體傳播媒介與陽明交大資工系專業技能，使物聯網裝置達成虛實跨界線上互動</p>
 				<div class="col-12"><span class="image fit"><img src="images/b1.jpg" alt="" /></span></div>
 
 				<img src="images/image2.png" alt="輕鬆點擊即刻進入" style="width: 80%;">
 				<p>使用IoTtalk平台為後端，觀眾掃描QRcode或點擊網址，輕鬆進入設計互動頁面</p>
+				<div class="col-12"><span class="image fit"><img src="images/b2.jpg" alt="" /></span></div>
 
 				<img src="images/image4.png" alt="三款螢光棒隨意換" style="width: 80%;">
 				<p>設計團隊以「清水紗智子」打造了專屬風格，以粉絲「花椰菜」為主題做創意設計</p>
@@ -90,17 +94,19 @@
 	<section id="three" class="main special">
 		<div class="container">
 			<div class="content">
-				<header class="major">
+				<!-- <header class="major">
 					<h2>特色</h2>
-				</header>
+				</header> -->
 				<div class="col-12"><span class="image fit"><img src="images/image3.png" alt="" /></span></div>
 
-				<h3>專屬應援分數</h3>
-				<p>所有花椰菜的等級加總會顯示在畫面暈船濃度上</p>
 				<h3>集氣分級</h3>
 				<p>使用者搖晃手機，共分五個等級，5等搖晃程度最高</p>
+				
+				<h3>專屬應援分數</h3>
+				<p>所有花椰菜的等級加總會顯示在畫面暈船濃度上</p>
+
 			</div>
-			<!-- <a href="#footer" class="goto-next scrolly">Next</a> -->
+
 			<script>
 				function showAlert(event) {
 					event.preventDefault();  // This prevents the page from navigating away
