--- a/line/index.html
+++ b/line/index.html
@@ -50,8 +50,8 @@
 window.onload = function () {
     var url_string = window.location.href
     var url = new URL(url_string)
-    var muid = url.searchParams.get("muid")
-    var tuid = url.searchParams.get("tuid")
+    // var muid = url.searchParams.get("muid")
+    // var tuid = url.searchParams.get("tuid")
     var flexMessage = {
       "type": "bubble",
       "hero": {
@@ -118,7 +118,7 @@ window.onload = function () {
                 alert("你目前的裝置或 LINE APP 版本尚未支援訊息分享。")
             })
         } else {
-            alert("你目前的裝置或 LINE APP 版本尚未支援訊息分享。")
+            alert("你目前的裝置或 LINE APP 版本尚未支援訊息分享。QQ")
             document.getElementById('back').style.display = "block"
             liff.closeWindow()
         }
