--- a/line2/index.html
+++ b/line2/index.html
@@ -46,7 +46,7 @@
         <div id="data-block"></div>
         <div id="back">關閉視窗</div>
     </div>
-    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </body>
 
 </html>
