--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>QR Code Scanner</title>
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
 </head>
 <body>
     <div id="reader" style="width: 300px; height: 300px;"></div>
