--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -13,7 +13,14 @@
       });
       Instascan.Camera.getCameras().then(function (cameras) {
         if (cameras.length > 0) {
-          scanner.start(cameras[0]);
+          var selectedCam = cameras[0];
+          // 如果存在多個攝像頭，優先選擇後置攝像頭
+          cameras.forEach(function (camera) {
+            if (camera.name.indexOf('back') !== -1) {
+              selectedCam = camera;
+            }
+          });
+          scanner.start(selectedCam);
         } else {
           console.error('No cameras found.');
         }
