--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Instascan</title>
-    <script type="text/javascript" src="https://tzeng17.com/game/GivemeFind/js/instascan.min.js"></script>	
-</head>
+    <title>QR Scanner</title>
+    <script type="text/javascript" src="instascan.min.js"></script>
+    <style>
+      #preview {
+        width: 500px;
+        height: 500px;
+        background-color: #ccc;
+      }
+    </style>
+  </head>
   <body>
     <video id="preview"></video>
+    <div id="result"></div>
     <script type="text/javascript">
-      let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
-      scanner.addListener('scan', function (content) {
-        console.log(content);
+      let scanner = new Instascan.Scanner({
+        video: document.getElementById('preview'),
+        mirror: false,
       });
-      Instascan.Camera.getCameras().then(function (cameras) {
+      scanner.addListener('scan', function(content) {
+        document.getElementById('result').innerHTML = content;
+      });
+      Instascan.Camera.getCameras().then(function(cameras) {
         if (cameras.length > 0) {
-          var selectedCam = cameras[0];
-          // 如果存在多個攝像頭，優先選擇後置攝像頭
-          cameras.forEach(function (camera) {
-            if (camera.name.indexOf('back') !== -1) {
-              selectedCam = camera;
-            }
-          });
-          scanner.start(selectedCam);
+          scanner.start(cameras[0]);
         } else {
           console.error('No cameras found.');
         }
-      }).catch(function (e) {
+      }).catch(function(e) {
         console.error(e);
       });
     </script>
