--- a/line2/index.html
+++ b/line2/index.html
@@ -53,7 +53,13 @@
 
 <script type="text/javascript">
     window.onload = function () {
-        fetch('data1.json')
+
+        // Get query parameter from URL
+        var urlParams = new URLSearchParams(window.location.search);
+        var jsonFile = urlParams.get('jsonFile');
+
+        // Use the query parameter to determine which JSON file to fetch
+        fetch(jsonFile + '.json')
         .then(response => response.json())
         .then(data => {
             var flexMessage = {
