--- a/nycu/b.html
+++ b/nycu/b.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
     window.onload = function () {
-        fetch('a_b.json') //這裡要改
+        fetch('b.json') //這裡要改
         .then(response => response.json())
         .then(data => {
             var flexMessage = {
@@ -85,7 +85,7 @@
                     console.log(err);
                     liff.closeWindow();
                 })
-    
+
             function liffShare() {
                 if (liff.isApiAvailable('shareTargetPicker')) {
                     liff.shareTargetPicker([flexMessage]).then(
