--- a/nycu/g.html
+++ b/nycu/g.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
     window.onload = function () {
-        fetch('a_g.json') //這裡要改
+        fetch('a_g.json')
         .then(response => response.json())
         .then(data => {
             var flexMessage = {
@@ -66,7 +66,7 @@
     
             liff
                 .init({
-                    liffId: "1661407197-JkgMv7mQ" //這裡要改
+                    liffId: "1661407197-JkgMv7mQ"
                 })
                 .then(() => {
                     if (liff.isInClient()) {
