--- a/nycu/o.html
+++ b/nycu/o.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
     window.onload = function () {
-        fetch('a_o.json') //這裡要改
+        fetch('a_o.json')
         .then(response => response.json())
         .then(data => {
             var flexMessage = {
@@ -66,7 +66,7 @@
     
             liff
                 .init({
-                    liffId: "1661407197-290BqR7Q" //這裡要改
+                    liffId: "1661407197-290BqR7Q"
                 })
                 .then(() => {
                     if (liff.isInClient()) {
