--- a/nycu/b.html
+++ b/nycu/b.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
     window.onload = function () {
-        fetch('a_b.json')
+        fetch('data2.json')
         .then(response => response.json())
         .then(data => {
             var flexMessage = {
