--- a/nycu/b.html
+++ b/nycu/b.html
@@ -94,10 +94,10 @@
                             console.log(res)
                             liff.closeWindow()
                         }
-                    ).catch(function (res) {
-                        console.log(res)
-                        alert("你目前的裝置或 LINE APP 版本尚未支援訊息分享。")
-                    })
+                    ).catch(function (err) {
+                        console.error("分享過程中發生錯誤：", err);
+                        alert("分享過程中發生錯誤，請查看主控台獲取更多資訊。");
+                    });
                 } else {
                     alert("你目前的裝置或 LINE APP 版本尚未支援訊息分享。QQ")
                     document.getElementById('back').style.display = "block"
