--- a/nycu/r.html
+++ b/nycu/r.html
@@ -66,7 +66,7 @@
     
             liff
                 .init({
-                    liffId: "1661407197-23zKqP4j"
+                    liffId: "1661407197-KDDrjyV6"
                 })
                 .then(() => {
                     if (liff.isInClient()) {
